--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
 		"node-poppler": "^7.2.4",
 		"octokit": "^4.1.3",
 		"plotly.js-dist": "^3.0.1",
-		"util": "^0.12.5"
+		"util": "^0.12.5",
+		"xss": "^1.0.15"
 	},
 	"devDependencies": {
 		"@octokit/types": "^14.0.0",
